ヘッダー作成

--- a/app/assets/stylesheets/_tickets.scss
+++ b/app/assets/stylesheets/_tickets.scss
@@ -1,19 +1,53 @@
 .header{
+  max-width: 1040px;
   width: 100%;
   height: 130px;
   &__main{
     display: flex;
-    padding: 20px, 50px;
-    &__search{
-      width: 70%;
+    justify-content: center;
+    &__logo{
+      padding: 15px
     }
-    &__botton{
-      background-color: blue;
+    &__search{
+      line-height: 130px;
+      width: 70%;
+      height: 130px;
+      display: flex;
+      align-items: center;
+      &__form{
+        height: 40px;
+        width: calc(100% - 60px);
+        display: block;
+      }
+      &__button{
+        background-color: #333366;
+        margin-right: 10px;
+        color: white;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        .fa-search{
+          font-size: 20px;
+          padding-left: 10px; 
+        }
+      }
     }
   }
-  .botton__nav{
+  .button__nav{
     display: flex;
-    
-
+    width: 100%;
+    height: 30px;
+    background-color: #333366;
+    justify-content: flex-end;
+    font-size: 13px;
+    color: white;
+    line-height: 30px;
+    &__logout{
+      padding-right: 30px
+    }
+    &__mypage{
+      padding-right: 30px;
+    }
   }
 }
