--- a/app/views/tickets/index.html.haml
+++ b/app/views/tickets/index.html.haml
@@ -1,6 +1,15 @@
-.header
+.top_header
   = render partial: 'shared/header'
 .contents
+  .introduction
+    .introduction__title
+      邦ロックファン全員集合
+    .introduction__explanation
+      邦ロック好きのためのまとめアプリ
+  .upcoming
+
+  .closed
+
 
 .footer
 
