--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,6 @@
 @import "font-awesome";
 @import "header";
 @import "footer";
+@import "simple_header";
+@import "users/registrations/new";
+@import "users/sessions/new";
