--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,6 @@
-%h2 Sign up
+.new_user_registration__screen
+  .new_user_registration__screen__title
+    デバイスのビューを参照しているよ
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "devise/shared/error_messages", resource: resource
   .field
