デバイス導入完了

--- a/app/views/shared/_top_footer.html.haml
+++ b/app/views/shared/_top_footer.html.haml
@@ -26,3 +26,10 @@
           ROCK LOVE HOUSE
       .copyright
         © 2020 Shun Sakai All right reserved.
+  = link_to set_lists_path do
+    %button.set_list__button
+      %i.fas.fa-list-ul
+      .set_list__button__guide
+        セットリストを
+        %br
+        投稿する
