--- a/app/views/tickets/index.html.haml
+++ b/app/views/tickets/index.html.haml
@@ -99,5 +99,5 @@
           %br
           [Alexandros]、sumika、フレデリック and more...
 .top_footer
-  = render partial: "shared/footer"
+  = render partial: "shared/top_footer"
   
