--- a/app/assets/stylesheets/users/registrations/_new.scss
+++ b/app/assets/stylesheets/users/registrations/_new.scss
@@ -39,6 +39,7 @@
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
+            border-radius: 5px;
           }
         }
       }
@@ -61,6 +62,7 @@
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
+            border-radius: 5px;
           }
         }
       }
@@ -83,6 +85,7 @@
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
+            border-radius: 5px;
           }
         }
       }
@@ -105,6 +108,7 @@
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
+            border-radius: 5px;
           }
         }
       }
@@ -124,6 +128,7 @@
           font-weight: bold;
           font-size: 17px;
           cursor: pointer; 
+          border-radius: 5px;;
         }
       }
     }
