--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,6 @@
 @import "simple_header";
 @import "users/registrations/new";
 @import "users/sessions/new";
+@import "events/index";
+@import "events/choise_artist";
+@import "set_lists/new";
