--- a/app/views/events/choise_artist.html.haml
+++ b/app/views/events/choise_artist.html.haml
@@ -27,6 +27,7 @@
     .set_list__post__explanation
       セットリストを投稿する方はこちら
     .set_list__post__button__box
+      -# new_set_list_pathの引数は@eventでも@event.idでもどっちでもいい
       = link_to new_set_list_path(@event.id), class: "set_list__post__button" do
         セットリストを投稿する
 
