非同期でのコメント機能実装

--- a/app/assets/stylesheets/set_lists/_show.scss
+++ b/app/assets/stylesheets/set_lists/_show.scss
@@ -134,7 +134,7 @@
         width: calc(100% - 65px);
         height: 40px;
       }
-      .post__button{
+      .comment__post__button{
         width: 60px;
         height: 40px;
         position: absolute;
