--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -21,7 +21,7 @@
       }
       &__button{
         background-color: #333366;
-        margin-right: 10px;
+        margin-left: 5px;
         color: white;
         width: 40px;
         height: 40px;
