--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,5 @@
 @import "events/index";
 @import "events/choise_artist";
 @import "set_lists/new";
-@import "set_lists/show"
+@import "set_lists/show";
+@import "set_lists/edit";
