--- a/app/views/set_lists/show.html.haml
+++ b/app/views/set_lists/show.html.haml
@@ -11,21 +11,21 @@
       .button__box
         - if user_signed_in?
           - if @set_list.liked_by?(current_user)
-            = link_to set_list_likes_path(@event, @set_list), method: :delete do
+            = link_to event_set_list_likes_path(@event, @set_list), method: :delete do
               .like__box
                 .heart__mark__unregistered
                   &#9829
                 .like__number
                   = @set_list.likes.count
           - else
-            = link_to set_list_likes_path(@event, @set_list), method: :post do
+            = link_to event_set_list_likes_path(@event, @set_list), method: :post do
               .like__box
                 .heart__mark__registered
                   &#9829
                 .like__number
                   = @set_list.likes.count
         - else
-          .button__box
+          .like__box
             .heart__mark__registered
               &#9829
             .like__number
@@ -98,21 +98,34 @@
               10.
             .song__name
               = @set_list.tenth_song
+    .right__box
+      - if user_signed_in? && current_user.id == @set_list.user_id
+        .right__box__button__box
+          = link_to edit_event_set_list_path(@event, @set_list), class: "edit__button" do
+            編集
+          = link_to event_set_list_path(@event, @set_list), class: "delete__button", method: :delete do
+            削除
   .comment__box
     .comment__contents
       - @comments.each do |comment|
-        .comment__posted
+        .comment__posted{data: {comment_id: "#{comment.id}"}}
           .comment__posted__information
             .comment__user__nickname
               = comment.user.nickname
             .comment__post__time
               = comment.created_at.strftime("%Y年%m月%d日 %H:%M")
-          .comment__posted__content
-            = comment.content
+          .comment__posted__box
+            .comment__posted__content
+              = comment.content
+            - if current_user.id == comment.user_id 
+              %button.comment__delete__button
+                %i.far.fa-trash-alt
     .comment__form__box
       = form_for [@set_list, @comment], url: {controller: 'comments', action: 'create', set_list_id: '1'} do |f|
         = f.text_field :content, placeholder: "コメントを入力して下さい", class: "comment__form"
+        = f.hidden_field :set_list_id, value: @set_list.id
         = f.button type: "submit", class: "comment__post__button" do
           %i.far.fa-comment
 
 = render partial: "shared/footer"
+
