--- a/app/views/events/choise_artist.html.haml
+++ b/app/views/events/choise_artist.html.haml
@@ -11,7 +11,7 @@
       - @set_lists.each_with_index do |set_list, i|
         - if i % 2 == 0
           .artist__box
-            = link_to set_list_path(set_list.id), class: "artist__box__content" do
+            = link_to event_set_list_path(@event, set_list), class: "artist__box__content", method: :get do
               = set_list.artist
               %br
                 のセットリストを見る
@@ -20,15 +20,17 @@
       - @set_lists.each_with_index do |set_list, i|
         - unless i % 2 == 0
           .artist__box
-            .artist__box__content
-              = set_list.artist + "のセットリストを見る"
+            = link_to event_set_list_path(@event, set_list), class: "artist__box__content", method: :get do
+              = set_list.artist
+              %br
+                のセットリストを見る
     
   .set_list__post
     .set_list__post__explanation
       セットリストを投稿する方はこちら
     .set_list__post__button__box
       -# new_set_list_pathの引数は@eventでも@event.idでもどっちでもいい
-      = link_to new_set_list_path(@event.id), class: "set_list__post__button" do
+      = link_to new_event_set_list_path(@event.id), class: "set_list__post__button" do
         セットリストを投稿する
 
 = render partial: "shared/footer"
