セットリスト投稿機能完了

--- a/app/assets/stylesheets/set_lists/_show.scss
+++ b/app/assets/stylesheets/set_lists/_show.scss
@@ -140,6 +140,9 @@
       width: 80%;
       margin: 0 auto;
       padding-top: 20px;
+      .comment__empty{
+        color: #5d627b;
+      }
       .comment__posted{
         padding-bottom: 20px;
         &__information{
