--- a/app/assets/stylesheets/_tickets.scss
+++ b/app/assets/stylesheets/_tickets.scss
@@ -9,7 +9,7 @@
   .introduction{
     height: 600px;
     width: 100%;
-    background-image: url(フェス画像.jpg);
+    background-image: url(fes_image.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center; 
