--- a/app/views/set_lists/show.html.haml
+++ b/app/views/set_lists/show.html.haml
@@ -9,27 +9,8 @@
         .contributor__nickname
           さかい
       .button__box
-        - if user_signed_in?
-          - if @set_list.liked_by?(current_user)
-            = link_to event_set_list_likes_path(@event, @set_list), method: :delete do
-              .like__box
-                .heart__mark__unregistered
-                  &#9829
-                .like__number
-                  = @set_list.likes.count
-          - else
-            = link_to event_set_list_likes_path(@event, @set_list), method: :post do
-              .like__box
-                .heart__mark__registered
-                  &#9829
-                .like__number
-                  = @set_list.likes.count
-        - else
-          .like__box
-            .heart__mark__registered
-              &#9829
-            .like__number
-              = @set_list.likes.count
+        .like__button
+          = render partial: "likes/like", locals: { event: @event, set_list: @set_list }
         .twitter__box
           %i.fab.fa-twitter
     .posted__set_list
