--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -16,5 +16,5 @@
       .button__nav__login
         = link_to "ログイン", new_user_session_path, class: "login__button"
       .button__nav__new_user_registration
-        = link_to "新規登録", new_user_registration_path , class: "new_user_registration__button"
+        = link_to "新規登録", new_user_path , class: "new_user_registration__button"
     
